# ANALYTICS-DP

./: .env.example  .gitignore  Empregados - Mendonça Galvão - Ativos_1783969881041.xls  Empregados - Suporte - Ativos_1783969882124.xls  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py  utils.py
backend/app/api/: auth.py  employees.py  imports.py  metrics.py  quality.py
backend/app/core/: auth.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/parser/: deterministic.py
backend/app/services/: consolidation.py  metrics.py
backend/app/storage/: minio_client.py
backend/app/worker/: main.py
backend/migrations/: env.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: LoginGate.tsx
frontend/src/layout/: MainLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  EmployeesPage.tsx  ImportsPage.tsx  QualityPage.tsx
